--- a/src/Dizzy/Wsdl2phpBundle/Resources/views/layout.html.twig
+++ b/src/Dizzy/Wsdl2phpBundle/Resources/views/layout.html.twig
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-    <title>Bootstrap 101 Template</title>
+    <title>wsdl2php </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="{{ asset('css/bootstrap.css') }}" rel="stylesheet" media="screen">
@@ -13,9 +13,26 @@
 </head>
 
 <body>
-{% block body %}
 
-{% endblock %}
+<div class="navbar navbar-inverse" role="navigation">
+    <div class="container">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#">Wsdl2php</a>
+        </div>
+    </div>
+</div>
+
+<div class="container">
+
+    <div class="starter-template">
+        <h1>Php proxy-class generator for soap services</h1>
+
+        {% block body %}
+
+        {% endblock %}
+    </div>
+</div>
+
 
 <!-- jQuery (necessary for Bootstraps JavaScript plugins) -->
 <script src="{{ asset('js/jquery.js') }}"></script>
