--- a/src/Dizzy/Wsdl2phpBundle/Resources/views/layout.html.twig
+++ b/src/Dizzy/Wsdl2phpBundle/Resources/views/layout.html.twig
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-
     <title>wsdl2php </title>
+    <meta name="keywords" content="WSDL,SOAP,PHP,1C,generator">
+    <meta name="description" content="PHP proxy-class generator for SOAP">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap -->
     <link href="{{ asset('css/bootstrap.css') }}" rel="stylesheet" media="screen">
-
-    <!-- HTML5 Shim and Respond.js add IE8 support of HTML5 elements and media queries -->
     {% include 'BraincraftedBootstrapBundle::ie8-support.html.twig' %}
 
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-55780274-1', 'auto');
+        ga('send', 'pageview');
+
+    </script>
 </head>
 
 <body>
@@ -23,9 +31,8 @@
 </div>
 
 <div class="container">
-
     <div class="starter-template">
-        <h1>Php proxy-class generator for soap services</h1>
+        <h1>PHP proxy-class generator for soap services</h1>
 
         {% block body %}
 
@@ -33,10 +40,7 @@
     </div>
 </div>
 
-
-<!-- jQuery (necessary for Bootstraps JavaScript plugins) -->
 <script src="{{ asset('js/jquery.js') }}"></script>
-<!-- Include all JavaScripts, compiled by Assetic -->
 <script src="{{ asset('js/bootstrap.js') }}"></script>
 </body>
 </html>
