--- a/src/Dizzy/Wsdl2phpBundle/Resources/views/layout.html.twig
+++ b/src/Dizzy/Wsdl2phpBundle/Resources/views/layout.html.twig
@@ -40,6 +40,12 @@
     </div>
 </div>
 
+<hr>
+
+<div class="container">
+    <a href="mailto:7dizzy7@gmail.com">Feedback</a>
+</div>
+
 <script src="{{ asset('js/jquery.js') }}"></script>
 <script src="{{ asset('js/bootstrap.js') }}"></script>
 </body>
